[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -9,7 +9,7 @@
         </div>
         <br>
         <div class="center text-big bold">
-            Hi! whadupp nigga!!!
+            Hi! I am jin and its mah app!!!
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
