[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -11,6 +11,17 @@
         <div class="center text-big bold">
             Hi! I am jin and its mah app!!!
         </div>
+        <div>
+            <h3>
+                LINKS
+            </h3>
+            <a href="/article-one">ARTICLE ONE</a>
+            <br>
+            <a href="/article-tow">ARTICLE TWO</a>
+            <br>
+            <a href="/article-three">ARTICLE THREE</a>
+            <br>
+        </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
