[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -17,7 +17,7 @@
             </h3>
             <a href="/article-one">ARTICLE ONE</a>
             <br>
-            <a href="/article-tow">ARTICLE TWO</a>
+            <a href="/article-two">ARTICLE TWO</a>
             <br>
             <a href="/article-three">ARTICLE THREE</a>
             <br>
