--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -3,10 +3,22 @@
         <title>
             Article Three | JIN09 
         </title>    
-        <meta name="viewport" content="width=device-width ,initial-scale=1" >
+        <meta name="viewport" content="width=device-width ,initial-scale=1" />
+            <style>
+            .container{
+                    max-width: 800px;
+                    margin: 0 auto;
+                    color: #4C4848;
+                    font-family: sans-serif;
+                    padding-top: 60px;
+                    padding-left: 20px;
+                    padding-right: 20px;
+            }
+        </style>
     </head>
     
     <body>
+        <div>
         <div>
             <a href ="/">Home</a>
         </div>
@@ -33,6 +45,7 @@
             <p>
                  This is my first article!! This is my first article!! This is my first article!! This is my first article!! This is my first article!! This is my first article!! This is my first article!! This is my first article!! 
             </p>
+        </div>
         </div>
     </body>
     
