--- a/ui/index.html
+++ b/ui/index.html
@@ -8,7 +8,7 @@
             <img src="/ui/madi.png" class="img-medium"/>
         </div>
         <br>
-        <div class="center text-big bold">
+        <div class="center text-big bold" id="txt">
             Hi! I am jin and its mah app!!!
         </div>
         <div>
