--- a/ui/index.html
+++ b/ui/index.html
@@ -4,23 +4,35 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
-        <div class="center">
-            <img src="/ui/madi.png" class="img-medium" id="madi"/>
-        </div>
-        <br>
-        <div class="center text-big bold" id="txt">
-            Hi! I am jin and its mah app!!!
-        </div>
-        <div>
-            <h3>
-                LINKS
-            </h3>
-            <a href="/article-one">ARTICLE ONE</a>
+        <div class="container">
+            <div class="center">
+                <img src="/http://vignette1.wikia.nocookie.net/disney/images/c/c8/Genie5.png/revision/latest?cb=20130719001923" class="img-medium" id="madi"/>
+            </div>
+            <hr/>
             <br>
-            <a href="/article-two">ARTICLE TWO</a>
-            <br>
-            <a href="/article-three">ARTICLE THREE</a>
-            <br>
+            <h3>Personal</h3>
+            <div>
+                HI!! my Name Is JIN09
+            </div>
+            <hr/>
+            <h3>Profesional</h3>
+            <div>
+                I work at Alladin :D
+            </div>
+            <div class="center text-big bold" id="txt">
+                Hi! I am jin and its mah app!!!
+            </div>
+            <div>
+                <h3>
+                    LINKS
+                </h3>
+                <a href="/article-one">ARTICLE ONE</a>
+                <br>
+                <a href="/article-two">ARTICLE TWO</a>
+                <br>
+                <a href="/article-three">ARTICLE THREE</a>
+                <br>
+            </div>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
