[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -30,6 +30,9 @@
                 <a href="/article-three">ARTICLE THREE</a>
                 <br>
             </div>
+            <div>
+                This Button <Button id="couunter">Click here!</Button> has been clicked <span id="count">0</span> times.
+            </div>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
