--- a/ui/index.html
+++ b/ui/index.html
@@ -32,7 +32,7 @@
             </div>
             <div>
                 <hr/>
-                This Button <Button id="couunter">Click here!</Button> has been clicked <span id="count">0</span> times.
+                This Button <Button id="counter">Click here!</Button> has been clicked <span id="count">0</span> times.
             </div>
         </div>
         <script type="text/javascript" src="/ui/main.js">
