--- a/ui/index.html
+++ b/ui/index.html
@@ -34,6 +34,21 @@
                 <hr/>
                 This Button <Button id="counter">Click here!</Button> has been clicked <span id="count">0</span> times.
             </div>
+            <hr/>
+            <input type="text" id="name">
+            <input type="submit" id="submit" value="submit">
+            <br/>
+            <ul>
+                <li>
+                    name 1
+                </li>
+                <li>
+                    name 2
+                </li>
+                <li>
+                    name 3
+                </li>
+            </ul>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
