[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -38,7 +38,7 @@
             <input type="text" id="name">
             <input type="submit" id="submit" value="submit">
             <br/>
-            <ul>
+            <ul id="list">
                 <li>
                     name 1
                 </li>
